# wp-mpris-headphones-script

./: CMakeLists.txt  README.md  main.c  wireplumber-mpris-headphones-script.service
